# rumble-py

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
docker/: docker-compose.yml
docs/: CHEAT_SHEET.md  CONCEPTS.md  CONFIGURATION.md  DEPLOYMENT.md  HARDWARE.md  issues-to-file.md
docs/adr/: 0001-speak-mumble-protocol-directly.md  0002-pymumble-pin-and-ssl-shim.md  0003-single-file-multi-bank-config.md  0004-goertzel-dtmf-detection-with-queue-worker-threading.md  0005-web-ui-server-rendered-htmx-no-js-framework.md
docs/wip/: session-2026-05-28.md
scripts/: listen_for_dtmf.py  mumble_smoke.py  web_smoke.py
src/rumble/: __init__.py  __main__.py  audio.py  commands.py  config.py  dtmf.py  dtmf_detector.py  ident.py  mumble_client.py  tts.py
src/rumble/web/: __init__.py  app.py  log_buffer.py
src/rumble/web/templates/: base.html  index.html
src/rumble/web/templates/partials/: channels.html  status.html
tests/: _dispatcher_fakes.py  _dtmf_helpers.py  _mumble_helpers.py  test_audio.py  test_commands.py  test_config.py  test_dtmf.py  test_dtmf_detector.py  test_mumble_client.py  test_mumble_uri.py  test_placeholder.py  test_tts.py  test_web.py
